1. Add .bashrc setting in tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,10 @@
+# 在.bashrc中设置
+# export TERM=xterm-256color 
+# 或者绑定vim命令
+#alias vi='TERM=xterm-256color ~/usr/bin/vim'
+#alias vim='TERM=xterm-256color ~/usr/bin/vim'
+#alias vimdiff='TERM=xterm-256color ~/usr/bin/vimdiff'
+
 # 改变快捷键前缀
 unbind C-b
 set -g prefix C-f
