--- a/tmux.conf
+++ b/tmux.conf
@@ -5,6 +5,9 @@
 #alias vim='TERM=xterm-256color ~/usr/bin/vim'
 #alias vimdiff='TERM=xterm-256color ~/usr/bin/vimdiff'
 
+#在vimrc中设置(不一定需要）
+#set term=screen
+
 # 改变快捷键前缀
 unbind C-b
 set -g prefix C-f
